--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
-.result-container {
-  display: none;
+.key-list {
+  list-style: none;
+  padding: 2px; 
+  float: left;
+}
+
+.key-list li {
+  margin: 0;
+  padding: 0;
+}
+
+.key {
+  
+}
+
+.key-list span {
+  color: #efefef;
+  width: 120px;
+  display: block;
+  padding: 2px;
+  font-size: 12px;
+  text-shadow: 2px -2px '#000';
 }
